Instead of always having an overflow: hidden on the .xxforms-animate class, add the overflow: hidden during the animation using JavaScript; fixes #32

--- a/src/resources-packaged/config/theme/xforms.css
+++ b/src/resources-packaged/config/theme/xforms.css
@@ -104,10 +104,6 @@ html body .xforms-form tr.xforms-disabled,
     position: static;
 }
 
-/* For animated toggle of switch/case */
-.xxforms-animate { overflow: hidden }
-
-
 /* ***** Label, hint, help, alert *********************************************************************************** */
 
 .xforms-hint {
